<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar">
    </include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/relme_cartel_principal"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:src="@mipmap/wall_paper"
            android:onClick="onClick"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_portada_principal"
            style="@style/subtitulo_portada_wallpaper2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_portada_principal_fecha"
            style="@style/subtitulo_portada_wallpaper1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_portada_principal_fecha2"
            style="@style/subtitulo_portada_fecha"
            />
        <TextView
            android:id="@+id/link_uci_cu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_portada_principal_fecha3"
            style="@style/subtitulo_portada_wallpaper1"
            android:onClick="onClick"/>
    </LinearLayout>

</LinearLayout>