<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConferencistasActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/toolbar"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_cambio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="?attr/actionBarSize">

        <ImageButton
            android:id="@+id/b_p1"
            android:background="@mipmap/p1"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:onClick="onClick"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_persona_1"
            style="@style/texto_hora_programa"/>
        <ImageButton
            android:id="@+id/b_p2"
            android:background="@mipmap/p2"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:onClick="onClick"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_persona_2"
            style="@style/texto_hora_programa"/>
        <ImageButton
            android:id="@+id/b_p3"
            android:background="@mipmap/p3"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:onClick="onClick"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_persona_3"
            style="@style/texto_hora_programa"/>
        <ImageButton
            android:id="@+id/b_p4"
            android:background="@mipmap/p4"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:onClick="onClick"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_persona_4"
            style="@style/texto_hora_programa"/>
    </LinearLayout>

</FrameLayout>