<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactosActivity"
    android:orientation="vertical"
    >

    <include
        layout="@layout/toolbar">
    </include>

    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.1"
            android:src="@drawable/numero_rozado"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/encabezado_descripcion"
                android:text="Contactos"/>
            <LinearLayout
                android:id="@+id/llamar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:onClick="onClick">
                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/llamar_ico"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/texto_hora_programa"
                    android:layout_gravity="center_vertical"
                    android:text="@string/numero_contacto"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:onClick="onClick">
                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/correo_ico"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/texto_hora_programa"
                    android:layout_gravity="center_vertical"
                    android:text="@string/coreo"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/sitio_web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:onClick="onClick">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/sitio_ico"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/texto_hora_programa"
                    android:layout_gravity="center_vertical"
                    android:text="@string/sitio_web"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/sitio_face"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:onClick="onClick">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/facebook_ico"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/texto_hora_programa"
                    android:layout_gravity="center_vertical"
                    android:text="@string/sitio_face"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/sitio_twitt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:onClick="onClick">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/twitt_ico"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/texto_hora_programa"
                    android:layout_gravity="center_vertical"
                    android:text="@string/sitio_twitt"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/sitio_yout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:onClick="onClick">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/yout_ico"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/texto_hora_programa"
                    android:layout_gravity="center_vertical"
                    android:text="@string/sitio_yout"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/sitio_linked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:onClick="onClick">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/linked_ico"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/texto_hora_programa"
                    android:layout_gravity="center_vertical"
                    android:text="@string/sitio_linked"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>