<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelmeInfoActivity"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar">
    </include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/imagen_bandera"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bandera_relme_horizontal"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/texto_relme_info"
                style="@style/cajon_de_textos"
                android:layout_marginStart="4dp"
                />

            <TextView
                style="@style/links_programas"
                android:text="@string/tex_programa_acade"
                android:onClick="onClick"
                android:id="@+id/link_programa_academico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/links_programas"
                android:text="@string/tex_programa_gener"
                android:onClick="onClick"
                android:id="@+id/link_programa_general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/casio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/eti_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/cubaron"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/logo_xetid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>